# Infinite_Game_of_Life

./: CMakeLists.txt
src/: SearchTree.hpp  configuration.hpp  events.cpp  events.hpp  game.hpp  main.cpp  render.hpp
